--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,9 +2,9 @@ extends layout
 
 block content
   div.app
-    include topbar.pug
+    //- include topbar.pug
     div.app-content
-      include drawer.pug
+      include partials/drawer.pug
       div.chat-room
         div.message-history-container
         div.new-message-container
