New User model defined; Create User record function implemented

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,13 +1,14 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
-    link(rel='stylesheet', href='../stylesheets/normalize.css')
-    link(rel='stylesheet', href='../stylesheets/style.css')
-    link(rel='stylesheet', href='../stylesheets/login.css')
-    script(src='../javascripts/vendor/jquery-3.2.1.min.js')
-    script(src='../javascripts/login.js')
-  body
-    block content
-    block login
+    head
+        title= title
+        link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
+        link(rel='stylesheet', href='../stylesheets/normalize.css')
+        link(rel='stylesheet', href='../stylesheets/style.css')
+        link(rel='stylesheet', href='../stylesheets/login.css')
+        script(src='../javascripts/vendor/jquery-3.2.1.min.js')
+        script(src='../javascripts/login.js')
+    body
+        block content
+        block login
+        block signup
