Signup page layout implemented; frontend form validation implemented

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -5,9 +5,11 @@ html
         link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
         link(rel='stylesheet', href='../stylesheets/normalize.css')
         link(rel='stylesheet', href='../stylesheets/style.css')
-        link(rel='stylesheet', href='../stylesheets/login.css')
+        link(rel='stylesheet', href='../stylesheets/session.css')
         script(src='../javascripts/vendor/jquery-3.2.1.min.js')
+        script(src='../javascripts/helpers.js')
         script(src='../javascripts/login.js')
+        script(src='../javascripts/signup.js')
     body
         block content
         block login
