--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -2,8 +2,8 @@ extends layout
 
 block login
     div.app
-        div.login-page
-            div.login-page__content
+        div.session-page.login-page
+            div.session-page__content
                 form#login-form
                     div.form__content
                         div.form__header
