--- a/public/stylesheets/session.css
+++ b/public/stylesheets/session.css
@@ -1,52 +1,48 @@
-.login-page {
+.session-page.session-page {
     display: flex;
     flex-grow: 1;
     justify-content: center;
-    background-color: #6ce9e5;
+    background-color: #02c7d9;
 }
 
-/*.login-page__form {
-    width: 400px;
-    height: 200px;
-    background-color: #fff;
-}*/
-
-#login-form {
+.session-page form {
     border-radius: 4px;
     position: relative;
     top: 128px;
     background-color: #fff;
 }
 
-.form__content {
+.session-page .form__content {
     width: 400px;
     padding: 40px;
 }
 
-.form__header {
+.session-page .form__header {
     margin-bottom: 30px;
 }
 
-.form__header > h2 {
+.session-page .form__header > h2 {
     margin: 0;
-    color: #6ce9e5;
+    color: #02c7d9;
     font-size: 52px;
     text-align: center;
     line-height: 1;
 }
 
-.form__group {
+.session-page .form__group {
     display: flex;
     align-items: center;
 }
 
-.form__group .icon {
+.session-page .form__group .icon {
     margin-right: 15px;
-    color: rgba(159, 241, 249, 0.85);
+    color: #02c7d9;
     font-size: 28px;
 }
 
-.user-form__input {
+.session-page .user-form__input {
+    display: flex;
+    align-items: center;
     flex-grow: 1;
     border-radius: 4px;
     margin: 8px 0;
@@ -54,23 +50,28 @@
     background-color: rgba(159, 241, 249, 0.2);
 }
 
-.user-form__input input {
+.session-page .user-form__input.input--alert {
+    background-color: rgba(255, 118, 111, 0.4);
+}
+
+.session-page .user-form__input input {
+    flex-grow: 1;
     border: none;
     background-color: transparent;
-    color: #333;
+    color: rgba(51,51,51, 0.9);
     font-size: 18px;
     outline: none;
 }
 
-.user-form__input input::-webkit-input-placeholder {
+.session-page .user-form__input input::-webkit-input-placeholder {
     color: rgba(51,51,51, 0.5);
 }
 
-.form__submit {
+.session-page .form__submit {
     display: flex;
 }
 
-.form__submit #btn-login {
+.session-page .form__submit input {
     flex-grow: 1;
     border: none;
     border-radius: 0 0 4px 4px;
@@ -82,7 +83,7 @@
     transition: all 0.2s ease;
 }
 
-.form__submit #btn-login.btn--active {
+.session-page .form__submit input.btn--active {
     background-color: #ffd16f;
     color: #fff;
     cursor: pointer;
