--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -4,7 +4,7 @@ block login
     div.app
         div.session-page.login-page
             div.session-page__content
-                form#login-form
+                form(id='login-form' action="/session/login" method="POST")
                     div.form__content
                         div.form__header
                             h2 Ponton
@@ -12,10 +12,12 @@ block login
                             div.form__group
                                 i(class="material-icons icon") account_circle
                                 div.user-form__input
-                                    input(class="email" id="user_username" name="user[email]" placeholder="email" autofocus="true" autocomplete="true")
+                                    input(class="email" id="user_username" name="email" placeholder="email" autofocus="true" autocomplete="true")
                             div.form__group
                                 i(class="material-icons icon") lock
                                 div.user-form__input
-                                    input(class="password" id="user_password" name="user[password]" placeholder="password" type="password")
+                                    input(class="password" id="user_password" name="password" placeholder="password" type="password")
+                            div.form__redirect
+                                a(href='/signup') Not a member?
                     div.form__submit
                         input(id="btn-login" type="submit" value="Log in to Ponton" disabled="true" data-action="login-user")
