--- a/src/views/partials/drawer.pug
+++ b/src/views/partials/drawer.pug
@@ -7,5 +7,7 @@ div.drawer
             h2 Search Contacts
             hr
         div.drawer-main__list
-            each friend in friends 
+            each friend in friends
                 a.drawer-list__item= friend.name
+    div.drawer__footer
+        a(href='/session/logout' class='drawer-list__item') Log out
