refactoring routes to only one file; introducing auth middleware for checking an authenticated user (checks in for a session)

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -4,7 +4,7 @@ block login
     div.app
         div.session-page.login-page
             div.session-page__content
-                form(id='login-form' action="/session/login" method="POST")
+                form(id='login-form' action="/login" method="POST")
                     div.form__content
                         div.form__header
                             h2 Ponton
