--- a/src/views/partials/drawer.pug
+++ b/src/views/partials/drawer.pug
@@ -10,4 +10,4 @@ div.drawer
             each friend in friends
                 a.drawer-list__item= friend.name
     div.drawer__footer
-        a(href='/session/logout' class='drawer-list__item') Log out
+        a(href='/logout' class='drawer-list__item') Log out
