--- a/public/stylesheets/session.css
+++ b/public/stylesheets/session.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-grow: 1;
     justify-content: center;
-    background-color: #02c7d9;
+    background: linear-gradient(141deg, rgb(15, 184, 173) 0%, rgb(31, 200, 219) 51%, rgb(44, 181, 232) 75%);
 }
 
 .session-page form {
