--- a/src/views/signup.pug
+++ b/src/views/signup.pug
@@ -26,6 +26,6 @@ block signup
                                 div.user-form__input
                                     input(class="password-confirmation" id="user_password_confirmation" name="user[password_confirmation]" placeholder="confirm password (min 6 characters)" type="password")
                             div.form__redirect
-                                a(href="/session/login") Already a member?
+                                a(href="/login") Already a member?
                     div.form__submit
                         input(id="btn-signup" type="submit" value="Sign up to Ponton" disabled="true" data-action="signup-user")
