--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -9,9 +9,11 @@ html
         link(rel='stylesheet', href='../stylesheets/session.css')
         script(src='../javascripts/vendor/jquery-3.2.1.min.js')
         script(src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js")
         script(src='../javascripts/helpers.js')
         script(src='../javascripts/login.js')
         script(src='../javascripts/signup.js')
+        script(src='../javascripts/chat.js')
     body
         block content
         block login
