--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,6 +48,7 @@ body {
   flex-direction: column;
   width: 280px;
   background-color: #02c7d9;
+  overflow-y: scroll;
 }
 
 .drawer__header {
@@ -97,6 +98,15 @@ body {
 
 .drawer-list__item:hover {
   background-color: rgba(0,0,0, 0.05);
+}
+
+.drawer-list__item.item__user-info {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.drawer-list__item.item__user-info .user-email{
+  text-transform: lowercase;
 }
 
 .drawer__footer {
